const-tests/duplicate_translation_target.stderr
error[E0080]: evaluation of constant value failed
 --> const-tests/duplicate_translation_target.rs:3:28
  |
3 |   const _ESC: Escape<8, 4> = Escape::const_new(
  |  ____________________________^
4 | |     '\\',
5 | |     ['\\', '[', ']', '"', '\0', '\n', '\r', '\t'],
6 | |     [('\n', "n"), ('\r', "n"), ('\0', "0"), ('\t', "t")],
7 | |     None,
8 | | );
  | |_^ evaluation panicked: assertion failed: !str_byte_eq(&tr[j].1, &tr[i].1)
  |
note: inside `escaping::Escape::<'_, 8, 4>::const_new`
 --> src/lib.rs
  |
  |                     assert!(!str_byte_eq(&tr[j].1, &tr[i].1))
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
